20260719 Greedy.java